Web/static/css/main.css
/* ... */
.post-horizontal {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    gap: 3px;
}

.post-vertical {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    gap: 3px;
}

.post-horizontal .upload-item {
    /*width: 75px;
    height: 60px;*/
    overflow: hidden;
    display: inline-flex;
    justify-content: center;
    align-items: center;
    position: relative;
    min-height: 63px;
}

.post-horizontal .upload-item .play-button, .compact_video .play-button, .docGalleryItem .play-button {
    position: absolute;
    height: 30px;
    width: 30px;
    background: rgba(0, 0, 0, 0.8);

    display: flex;
    justify-content: center;
    align-items: center;
}

.post-horizontal .upload-item .play-button .play-button-ico, .compact_video .play-button .play-button-ico, .docGalleryItem .play-button .play-button-ico {
    background: url(/assets/packages/static/openvk/img/wall.png) no-repeat 1px 0;
    display: inline-block;
    height: 15px;
    width: 12px;
}

.upload-item.dragged {
    filter: contrast(0.5);
}

.post-horizontal .upload-item .upload-delete {
    position: absolute;
    background: rgba(0,0,0,0.5);
    padding: 2px 5px;
    text-decoration: none;
    color: #fff;
    font-size: 11px;
    right: 0px;
    top: 0px;
    opacity: 0;
    transition: 0.25s;
}

.upload-item:hover > .upload-delete {
    opacity: 1;
}

.post-horizontal .upload-item img {
    width: 100%;
    max-height: 60px;
    object-fit: cover;
    border-radius: 3px;
}

.vertical-attachment {
    display: grid;
    grid-template-columns: 1fr 0fr;
}

.vertical-attachment:first-of-type {
    margin-top: 7px;
}

.vertical-attachment .audioEntry {
    max-height: 28px;
    min-height: 18px;
}

.vertical-attachment .audioEntry:hover {
    background: unset !important;
}

.vertical-attachment .audioEntry .buttons {
    display: none;
}

.vertical-attachment .audioEntry .status {
    margin-top: 1px;
    margin-left: 2px;
    height: 15px;
}

.vertical-attachment .audioEntry .nobold {
    margin-top: 1px;
}

.vertical-attachment .audioEntry .subTracks {
    padding-left: 0px;
    padding-right: 0px;
    margin-top: 2px;
}

.vertical-attachment .audioEntry .audioEntryWrapper {
    height: 14px;
    padding: 0px 4px 0px 0px;
    gap: 2px;
}

.post-buttons .vertical-attachment .vertical-attachment-content { 
    /*max-height: 27px;*/
    padding: 3px 2px;
}

.vertical-attachment .vertical-attachment-content .overflowedName {
    position: initial;
    width: 100% !important;
}

/* https://imgur.com/a/ihB3JZ4 */

.ovk-photo-view-dimmer {
    position: fixed;
    left: 0px;
    top: 0px;
    right: 0px;
    bottom: 0px;
    overflow: auto;
    z-index: 300;
}

.ovk-photo-view-overlay {
    position: absolute;
    top: 0;
    width: 15%;
    height: 100%;
    z-index: 205;
    cursor: pointer;
}

.ovk-photo-view-overlay-left {
    left: 0;
}

.ovk-photo-view-overlay-right {
    right: 0;
    opacity: 40%;
}

.ovk-photo-view-overlay-right:hover, .ovk-photo-view-overlay-left:hover + .ovk-photo-view-overlay-right {
    opacity: 100%;
}

.ovk-photo-close-icon {
    position: fixed;
    top: 20px;
    right: 20px;
    width: 28px;
    height: 28px;
    background-image: url("data:image/svg+xml;utf8,\<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 28 28' stroke-width='5' stroke='%23fff' fill='none'>\<line x1='21' y1='7' x2='7' y2='21'/>\<line x1='7' y1='7' x2='21' y2='21'/>\</svg>");
    background-repeat: no-repeat;
    background-position: center;
    background-size: contain;
}

.ovk-photo-view {
    position: relative;
    z-index: 999;
    background: #fff;
    min-width: 600px;
    width: fit-content;
    padding: 25px;
    padding-top: 15px;
    padding-bottom: 10px;
    box-shadow: 0px 0px 3px 1px #222;
    margin: 10px auto 20px auto;
}

.ovk-photo-view .photo_viewer_wrapper {
    position: relative;
    height: 80vh;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
}

.ovk-photo-view .photo_viewer_wrapper.photo_viewer_wrapper_scrollable {
    height: unset;
}

.ovk-photo-view #ovk-photo-img {
    max-width: 100%; 
    max-height: 80vh; 
    user-select: none;
}

.ovk-photo-view iframe {
    width: 90vw;
    height: 100vh;
}

.photo_com_title {
	font-weight: bold;
	padding-bottom: 16px;
}

.photo_com_title div {
	float: right;
	font-weight: normal;
}

.ovk-photo-slide-left {
    left: 0;
    width: 35%;
    height: 100%;
    position: absolute;
    cursor: pointer;
}

.ovk-photo-slide-right {
    right: 0;
    width: 35%;
    height: 100%;
    position: absolute;
    cursor: pointer;
}

.ovk-photo-view .media-page-wrapper-details {
    display: flex;
    gap: 10px;
}

.ovk-photo-view .media-page-wrapper-comments {
    overflow-y: auto;
    overflow-x: hidden;
    min-height: 300px;
    width: 100%;
    padding: 0px 2px;
}

.ovk-photo-view .ovk-photo-details {
    margin-top: 10px;
}

.client_app > img {
	top: 3px;
	position: relative;
}

.client_app.client_app_titlebar > img {
    top: 2px;
	position: relative;
    filter: invert(100%) sepia(100%) saturate(800%) hue-rotate(2deg) brightness(130%) contrast(50.1%);
}

@keyframes appearing {
    from {
        opacity: 0;
    }

    to {
        opacity: 1;
    }
}

.regform-left{
	text-align: right;
	min-width: 110px;
}

.regform-right{
	min-width: 200px;
}


.tour {
    background: #F9F6E7;
    border: 1px solid #BEAD61;
    padding: 8px 25px;
    width:205px;
    text-align:center;
    color: #000;
    font-size:12px;
    margin:10px auto;
    cursor:hand;cursor:pointer;
}

.tour div {
    font-size: 11px; color:#000;
}

.video-wowzer > img {
    vertical-align: bottom;
}

.video-wowzer {
    font-weight: bolder;
    font-size: 12px;
    padding: 3px 0;
}

.video-wowzer .small-video-ico {
    vertical-align: bottom;
    display: inline-block;
    width: 11px;
    height: 14px;
    background: url(/assets/packages/static/openvk/img/wall.png?v=2);
    background-position: -87px 0px;
}
/* ... */

